# djangoblog

./: .env  .gitignore  docker-compose.dev.yml  docker-compose.yml  init-certbot.sh  init-letsencrypt.sh  readme.md  ssl-renew.sh  제목 없는 다이어그램.drawio
backend/: dockerfile  pyproject.toml  start.sh  test.sh
backend/carousel/: models.py  services.py  urls.py  views.py
backend/carousel/migrations/: 0001_initial.py  0002_carousel_is_active_carousel_title.py  0003_alter_carousel_image.py
backend/categories/: admin.py  models.py  services.py  urls.py  views.py
backend/categories/migrations/: 0001_initial.py
backend/comments/: models.py  services.py  urls.py  views.py
backend/comments/migrations/: 0001_initial.py  0002_initial.py
backend/config/: asgi.py  settings.py  urls.py  views.py
backend/contacts/: models.py  services.py  urls.py  views.py
backend/contacts/migrations/: 0001_initial.py  0002_inquiry_delete_contact.py
backend/core/: context_processors.py
backend/example/: consumers.py  routing.py  urls.py  views.py
backend/likes/: models.py
backend/likes/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py
backend/posts/: admin.py  models.py  services.py  urls.py  views.py
backend/posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_tags.py  0004_post_image.py  0005_post_is_public_post_view_count.py
backend/posts/templatetags/: __init__.py  (+1 more)
backend/tags/: apps.py  models.py  signals.py
backend/templates/: base.html  index.html
backend/users/: admin.py  models.py  services.py  tests.py  urls.py  views.py
(+38 files in other folders)
