[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["seungwon0113 <jungseungwon0113@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
environ = "^1.0"
django-environ = "^0.12.0"
psycopg2-binary = "^2.9.10"

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
